# bm-guard

./: .gitignore  CLAUDE.md  Cargo.nix  Cargo.toml  flake.nix
src/: main.rs
